docker compose updated

--- a/app.yaml
+++ b/app.yaml
@@ -2,10 +2,10 @@
   hosts: docker
   gather_facts: no
   tasks:
-    - name: Running docker-compose.yml
+    - name: Running docker-compose.yml down
       command: docker-compose down -d
     
-    - name: Running docker-compose.yml
+    - name: Running docker-compose.yml up
       command: docker-compose up -d
       register: output
 
