--- a/Prometheus/docker-compose.yml
+++ b/Prometheus/docker-compose.yml
@@ -13,3 +13,15 @@ services:
      image: prom/node-exporter
      ports:
        - '9100:9100'
+
+  grafana:
+     image: grafana/grafana
+     user: "0" #[ Execute  id -u in terminal to find the user id from where you are invoking docker compose]
+     volumes:
+       - ./grafana_db:/var/lib/grafana
+     environment:
+       - GF_SECURITY_ADMIN_PASSWORD=pratik
+     depends_on:
+       - prometheus
+     ports:
+       - '3000:3000'
