--- a/Prometheus/docker-compose.yml
+++ b/Prometheus/docker-compose.yml
@@ -4,7 +4,10 @@ services:
   prometheus:
      image: prom/prometheus:latest
      volumes:
-       - ./prometheus.yml:/etc/prometheus/prometheus.yml            
+       - ./prometheus.yml:/etc/prometheus/prometheus.yml
+       - ./prometheus_db:/var/lib/prometheus
+    # make sure you have prometheus.yaml file and prometheus_db directory in current directory
+    # To ensure data actually persists in docker volumes we use prometheus_db directory             
      command:
        - '--config.file=/etc/prometheus/prometheus.yml'
      ports:
@@ -13,6 +16,16 @@ services:
      image: prom/node-exporter
      ports:
        - '9100:9100'
+
+  cadvisor:
+     image: google/cadvisor:latest
+     ports:
+       - '8080:8080'
+     volumes:
+       - /:/rootfs:ro
+       - /var/run:/var/run:rw
+       - /sys:/sys:ro
+       - /var/lib/docker/:/var/lib/docker:ro
 
   grafana:
      image: grafana/grafana
