--- a/Prometheus/prometheus.yml
+++ b/Prometheus/prometheus.yml
@@ -8,8 +8,14 @@ rule_files:
 scrape_configs:
  - job_name: 'prometheus'
    static_configs:
-     - targets: ['172.16.9.95:9090']
+     - targets: ['172.16.9.95:9090']  # this is the ip where promethus server is installed
 
  - job_name: 'node-exporter'
    static_configs:
-     - targets: ['node-exporter:9100']
+     - targets: ['node-exporter:9100']  # here we used node-exporter as service which is automatically get resolved to ip.
+  # this job will help to export matrics where docker is hosted
+
+ - job_name: 'cAdvisor'
+   static_configs:
+     - targets: ['172.16.9.95:8080']
+  # this job will monitor all container on host where cAdvisor get run
